# CamouChat

./: .gitignore  CHANGELOG.md  Custom_logger.py  PR_validations.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  contributors.yml
camouchat/: NoOpPattern.py  __init__.py  camouchat_logger.py
camouchat/BrowserManager/: browser_config.py  browserforge.py  browserforge_manager.py  camoufox_browser.py  profile_manager.py
camouchat/BrowserManager/Interfaces/: __init__.py  browser_interface.py
camouchat/Exceptions/: whatsapp.py
camouchat/Filter/: message_filter.py
camouchat/Interfaces/: __init__.py  browser_interface.py  chat_interface.py  chat_processor_interface.py  interaction_controller_interface.py  login_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py
camouchat/StorageDB/: models.py  sqlalchemy_storage.py
camouchat/WhatsApp/: __init__.py  chat_processor.py  human_interaction_controller.py  humanized_operations.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
camouchat/WhatsApp/api/: __init__.py  chat_api_processor.py  msg_api_processor.py
camouchat/WhatsApp/api/managers/: chat_api_processor.py  msg_api_processor.py
camouchat/WhatsApp/api/models/: chat_api.py  message_api.py
camouchat/WhatsApp/api/wa_js/: __init__.py  wajs_scripts.py  wajs_wrapper.py
camouchat/WhatsApp/core/: login.py  web_ui_config.py
camouchat/WhatsApp/decorator/: __init__.py  msg_event_hook.py
camouchat/WhatsApp/dom/: __init__.py
camouchat/WhatsApp/dom/managers/: __init__.py  chat_processor.py  message_processor.py
camouchat/WhatsApp/dom/models/: __init__.py  chat.py  message.py
camouchat/WhatsApp/features/: interaction_controller.py  media_capable.py
camouchat/WhatsApp/models/: __init__.py  chat.py  chat_api.py  message.py  message_api.py
camouchat/WhatsApp/wa-js/: __init__.py  wajs_scripts.py  wajs_wrapper.py
camouchat/WhatsApp/wa_js/: wajs_scripts.py  wajs_wrapper.py
camouchat/contracts/: chat.py  chat_interface.py  chat_processor.py  chat_processor_interface.py  interaction_controller_interface.py  login.py  login_interface.py  media_capable.py  media_capable_interface.py  message.py  message_interface.py  message_processor.py  message_processor_interface.py  storage.py  storage_interface.py  web_ui_selector.py
docs/: Architecture & Key Designs.md  quickstart.md  smoke_test.py
docs/BrowserManager/: BrowserForgeCompatible.md  CamoufoxBrowser.md  quickstart.md
docs/Exceptions/: Exceptions.md
docs/WhatsApp/: ChatProcessor.md  MediaCapable.md  MessageProcessor.md  ReplyCapable.md  quickstart.md
src/: custom_logger.py
src/BrowserManager/: browserforge_manager.py  camoufox_browser.py  profile_manager.py
src/Encryption/: encryptor.py
src/Exceptions/: whatsapp.py
src/Interfaces/: browser_interface.py  humanize_operation_interface.py  login_interface.py  message_interface.py  storage_interface.py
src/StorageDB/: sqlalchemy_storage.py
src/WhatsApp/: chat_processor.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
src/camouchat_core/: __init__.py  camouchat_logger.py
src/camouchat_core/Encryption/: __init__.py  decryptor.py  key_manager.py
src/camouchat_core/Exceptions/: __init__.py
src/camouchat_core/contracts/: __init__.py  chat.py  chat_processor.py  interaction_controller.py  media_capable.py  message.py  message_processor.py  storage.py  ui_config.py
src/camouchat_core/global_metadata/: __init__.py
src/tweakio_sdk/: __init__.py
tests/: smoke_test.py  smoke_test_db.py
tests/E2E/: script_Storage.py  script_msgEvent.py
tests/Encryption/: __init__.py  test_encryption.py
tests/unit/BrowserManager/: test_browserforge_manager.py  test_camoufox_browser.py  test_fingerprint_uniqueness.py  test_profile_manager.py
tests/unit/StorageDB/: test_sqlalchemy_manual.py
tests/unit/WhatsApp/: test_Chat_Processor.py  test_Humanized_Operations.py  test_Login.py  test_Media_Capable.py  test_Message_Processor.py  test_Reply_Capable.py  test_Web_UI_Config.py
