[build-system]
requires = ["uv_build>=0.6.6,<0.7.0"]
build-backend = "uv_build"

[project]
name = "camouchat"
version = "0.7.0"
description = "High-performance, stealth-aware WhatsApp automation SDK. One install for the entire CamouChat plugin ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors     = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]
maintainers = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]

keywords = [
    "whatsapp",
    "whatsapp-automation",
    "whatsapp-bot",
    "whatsapp-web",
    "whatsapp-api",
    "whatsapp-api-alternative",
    "wa-js",
    "wppconnect",
    "playwright",
    "camoufox",
    "anti-detection",
    "anti-ban",
    "fingerprinting",
    "browser-automation",
    "stealth",
    "bypass",
    "encrypted-storage",
    "aes-256",
    "e2e-encryption",
    "async",
    "sqlite",
    "postgresql",
    "multi-account",
    "chat-bot",
    "agents",
    "automation-framework",
    "web-automation",
    "camouchat",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

# Meta-package: pulls in the full ecosystem
dependencies = [
    "camouchat-core>=0.7.0",
    "camouchat-browser>=0.7.0",
    "camouchat-whatsapp>=0.7.1",
    "camoufox[geoip]>=0.4.11",
]

[project.urls]
Homepage      = "https://github.com/CamouChat-Team/CamouChat"
Repository    = "https://github.com/CamouChat-Team/CamouChat"
"Bug Tracker" = "https://github.com/CamouChat-Team/CamouChat/issues"
Changelog     = "https://github.com/CamouChat-Team/CamouChat/releases"
Documentation = "https://github.com/CamouChat-Team/CamouChat#readme"
