[build-system]
requires = ["uv_build>=0.6.6,<0.7.0"]
build-backend = "uv_build"

[project]
name = "tweakio-sdk"
version = "0.7.1"
description = "[DEPRECATED] tweakio-sdk has been rebranded to CamouChat. Install camouchat-whatsapp instead."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors     = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]
maintainers = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]

keywords = [
    "whatsapp",
    "whatsapp-automation",
    "whatsapp-bot",
    "whatsapp-web",
    "whatsapp-api",
    "whatsapp-api-alternative",
    "wa-js",
    "wppconnect",
    "playwright",
    "camoufox",
    "anti-detection",
    "anti-ban",
    "fingerprinting",
    "browser-automation",
    "stealth",
    "bypass",
    "encrypted-storage",
    "aes-256",
    "e2e-encryption",
    "async",
    "sqlite",
    "postgresql",
    "multi-account",
    "chat-bot",
    "agents",
    "automation-framework",
    "web-automation",
    "camouchat",
]

classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Tombstone: no runtime deps, just redirects via README
dependencies = []

[project.urls]
Homepage      = "https://pypi.org/project/camouchat-whatsapp/"
Repository    = "https://github.com/CamouChat-Team/CamouChat"
"Bug Tracker" = "https://github.com/CamouChat-Team/CamouChat/issues"
Changelog     = "https://github.com/CamouChat-Team/CamouChat/releases"
Documentation = "https://github.com/CamouChat-Team/CamouChat#readme"
